# droplet-oidc-poc

./: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  demo.sh  pyproject.toml
.do/: app.yaml  deploy.template.yaml
droplet-roles/: ex-create-model-keys.hcl
policies/: account-read.hcl  create-model-keys.hcl  dns-register-self.hcl  ex-create-model-keys.hcl
roles/: create-model-keys.hcl
scripts/: cloud-init-config.yaml  cloud-init.sh  droplet-create.sh  entrypoint.sh  litellm-config.yaml  litellm-sanitize-proxy.py  litellm-sanitize-proxy.service  litellm-start.sh  litellm.service  make-cloud-init.py  markdown_parser.py  opencode.json  setup.sh
scripts/patches/statusphere-example-app/: 0001-app-route-policy-token.patch  get-token-cli.js
src/workload_identity_oauth_reverse_proxy/: cgi_helper.py  cloud-init.sh  common.py  database.py  do_api.py  firehose_to_ndjson.py  hcl_policy.py  jwt_helper.py  landing_page.py  oauth_helper.py  oidc_helper.py  provisioning.py  rbac_helper.py  reverse_proxy_aiohttp.py
src/workload_identity_oauth_reverse_proxy/apis/ATProto/: dpop.py
src/workload_identity_oauth_reverse_proxy/cgi/api/digitalocean/v2/databases/: database.py
src/workload_identity_oauth_reverse_proxy/cgi/api/oidc/v1/: issue.py  prove.py  refresh.py
src/workload_identity_oauth_reverse_proxy/cgi/auth/digitalocean/v1/: callback.py
src/workload_identity_oauth_reverse_proxy/cgi/auth/git/v1/: hcl_policy_upload.py
src/workload_identity_oauth_reverse_proxy/cgi/well_known/: jwks.py  openid_configuration.py
(+3 files in other folders)
